# web-crawler

./: .gitignore  README.md  config.yml  pyproject.toml
src/: config.py  fetcher.py  frontier.py  main.py  models.py  parser.py
src/utils/: robot.py
tests/: test_config.py  test_fetcher.py  test_frontier.py  test_integration.py  test_parser.py
