[project]
name = "web-crawler"
version = "0.1.0"
description = "Web Crawler"
authors = [
    {name = "Theodoros Marinos",email = "theodorosmarinos97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
